[package]
name = "flamebox"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.11.6"
flate2 = "1.0.35"
oci-spec = "0.7.1"
pathdiff = "0.2.3"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.134"
tar = "0.4.43"
tempfile = "3.16.0"
uuid = { version = "1.13.1", features = ["v4"] }
